data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_644.wast
;; 5. **Test: Loop with Recursive Function Call**    - **Description**: Test a loop with a nested recursive function call, which itself contains a loop.    - **Constraint Being Checked**: Proper handling of nested contexts and stack management.    - **Mismanagement**: Stack errors leading to incorrect branching or unwinding.

(assert_invalid
  (module
    (func $recursive_call (param i32)
      (local.get 0)
      (br_if 0)
      (call $recursive_call)
    )
    (func (loop (call $recursive_call)))
  )
  "type mismatch"
)